fix: made Trick compatible with new Turn, determine current winning player after each card played